Remove href from link to stop page jumping

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1182,3 +1182,9 @@ footer{
   transform: scale(1);
   opacity: 1;
 }
+
+.action-or-response {
+  a {
+    cursor: pointer;
+  }
+}
